apps/kustomize-second/second-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: second
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: eks-alb
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /second
            pathType: Prefix
            backend:
              service:
                name: second
                port:
                  name: svc-port
